# nvecd

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_ja.md  codecov.yml
e2e/: conftest.py  nvecd-test.yaml  pyproject.toml
e2e/lib/: nvecd_client.py  wait.py
e2e/tests/commands/: test_cache.py  test_config.py  test_debug.py  test_dump.py  test_event.py  test_info.py  test_sim.py  test_simv.py  test_variables.py  test_vecset.py
e2e/tests/edge_cases/: test_boundary_values.py  test_invalid_commands.py
e2e/tests/smoke/: test_client_framing.py  test_connectivity.py
e2e/tests/workflows/: test_full_pipeline.py
src/: CMakeLists.txt  main.cpp  version.h
src/cache/: cache_entry.h  cache_key.cpp  cache_key.h  cache_key_generator.cpp  cache_key_generator.h  cache_manager.cpp  cache_manager.h  invalidation_manager.cpp  invalidation_manager.h  invalidation_queue.cpp  invalidation_queue.h  md5.cpp  md5.h  query_cache.cpp  query_cache.h  query_normalizer.cpp  query_normalizer.h  result_compressor.cpp  result_compressor.h  similarity_cache.cpp  similarity_cache.h  similarity_cache_controller.cpp  similarity_cache_controller.h
src/cli/: nvecd-cli.cpp
src/client/: nvecdclient.cpp  nvecdclient.h  nvecdclient_c.cpp  nvecdclient_c.h  protocol_transport.h
src/config/: config-schema.json  config.cpp  config.h  config_help.cpp  config_help.h  config_schema_embedded.h.in  runtime_variable_manager.cpp  runtime_variable_manager.h
src/events/: co_occurrence_index.cpp  co_occurrence_index.h  dedup_cache.cpp  dedup_cache.h  event_store.cpp  event_store.h  ring_buffer.h  state_cache.cpp  state_cache.h
src/server/: command_parser.cpp  command_parser.h  command_types.h  connection_acceptor.cpp  connection_acceptor.h  connection_io_handler.cpp  connection_io_handler.h  decay_scheduler.cpp  decay_scheduler.h  filter_parser.cpp  filter_parser.h  http_server.cpp  http_server.h  io_reactor.cpp  io_reactor.h  nvecd_server.cpp  nvecd_server.h  rate_limiter.cpp  rate_limiter.h  reactor_connection.cpp  reactor_connection.h  request_dispatcher.cpp  request_dispatcher.h  score_format.h  server_types.h  similarity_result_utils.h  snapshot_scheduler.cpp  snapshot_scheduler.h  thread_pool.cpp  thread_pool.h  wal_codec.cpp  wal_codec.h
src/server/handlers/: admin_handler.cpp  admin_handler.h  cache_handler.cpp  cache_handler.h  debug_handler.cpp  debug_handler.h  dump_handler.cpp  dump_handler.h  info_handler.cpp  info_handler.h  variable_handler.cpp  variable_handler.h
src/server/reactor/: event_multiplexer.cpp  event_multiplexer.h
src/similarity/: similarity_engine.cpp  similarity_engine.h  similarity_result.h
src/storage/: snapshot_fork.cpp  snapshot_fork.h  snapshot_format.h  snapshot_format_v1.cpp  snapshot_format_v1.h  snapshot_lock.cpp  snapshot_lock.h  wal.cpp  wal.h  wal_checkpoint.cpp  wal_checkpoint.h
src/utils/: error.h  expected.h  fd_guard.h  flag_guard.h  memory_utils.cpp  memory_utils.h  network_utils.cpp  network_utils.h  path_utils.h  string_utils.cpp  string_utils.h  structured_log.h
src/vectors/: ann_index.h  cpu_features.cpp  cpu_features.h  distance.h  distance_avx2.h  distance_neon.h  distance_scalar.h  distance_simd.h  hnsw_index.cpp  hnsw_index.h  id_mapper.cpp  id_mapper.h  ivf_ann_adapter.h  ivf_index.cpp  ivf_index.h  merge_scheduler.cpp  merge_scheduler.h  metadata.h  metadata_filter.cpp  metadata_filter.h  metadata_store.cpp  metadata_store.h  quantizer.cpp  quantizer.h  tiered_vector_store.cpp  tiered_vector_store.h  vector_store.cpp  vector_store.h
tests/: CMakeLists.txt  docs_contract_test.py
tests/benchmark/: CMakeLists.txt  similarity_benchmark.cpp
tests/cache/: cache_key_generator_test.cpp  cache_key_test.cpp  cache_policy_test.cpp  md5_test.cpp  result_compressor_test.cpp  similarity_cache_test.cpp
tests/cli/: nvecd_cli_test.cpp
tests/client/: nvecd_cli_test.cpp  nvecdclient_c_test.cpp  nvecdclient_test.cpp
tests/config/: config_test.cpp  runtime_variable_manager_test.cpp  test_config.yaml
tests/events/: co_occurrence_incremental_test.cpp  co_occurrence_index_test.cpp  co_occurrence_negative_test.cpp  co_occurrence_pruning_test.cpp  co_occurrence_temporal_test.cpp  dedup_cache_test.cpp  event_store_dedup_test.cpp  event_store_test.cpp  event_type_test.cpp  ring_buffer_test.cpp  state_cache_test.cpp
tests/install_consumer/: CMakeLists.txt  install_consumer_smoke.cmake.in  main.c  main.cpp
tests/integration/: CMakeLists.txt  test_server_fixture.h  test_tcp_client.h
tests/integration/server/: CMakeLists.txt  adversarial_e2e_test.cpp  api_extension_e2e_test.cpp  cache_e2e_test.cpp  concurrent_e2e_test.cpp  differentiation_e2e_test.cpp  edge_case_e2e_test.cpp  end_to_end_test.cpp  metrics_e2e_test.cpp  performance_e2e_test.cpp  reactor_integration_test.cpp  similarity_e2e_test.cpp  tiktok_1m_scale_test.cpp  tiktok_scenario_e2e_test.cpp
tests/integration/snapshot/: CMakeLists.txt  snapshot_integration_test.cpp  wal_crash_recovery_test.cpp  wal_recovery_integration_test.cpp  wal_server_restart_recovery_test.cpp
tests/server/: command_parser_test.cpp  connection_acceptor_unix_test.cpp  connection_io_handler_test.cpp  decay_scheduler_test.cpp  filter_parser_test.cpp  http_server_test.cpp  io_reactor_test.cpp  rate_limiter_test.cpp  request_dispatcher_test.cpp  server_stats_test.cpp  snapshot_scheduler_test.cpp  thread_pool_test.cpp  wal_codec_test.cpp
tests/server/handlers/: handler_test.cpp
tests/similarity/: adaptive_fusion_test.cpp  concurrency_stress_test.cpp  similarity_engine_test.cpp
tests/storage/: snapshot_fork_test.cpp  snapshot_format_v1_test.cpp  snapshot_lock_test.cpp  wal_test.cpp
tests/utils/: expected_test.cpp  memory_utils_test.cpp  network_utils_test.cpp  path_utils_test.cpp  string_utils_test.cpp  structured_log_test.cpp
tests/vectors/: distance_functions_test.cpp  distance_simd_test.cpp  hnsw_index_test.cpp  id_mapper_test.cpp  ivf_index_test.cpp  metadata_filter_test.cpp  metadata_store_test.cpp  quantizer_test.cpp  tiered_vector_store_test.cpp  vector_store_test.cpp
(+27 files in other folders)
