[project]
name = "nvecd-e2e"
version = "0.1.0"
description = "nvecd end-to-end tests"
requires-python = ">= 3.10"
dependencies = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Basic connectivity and health checks",
    "commands: Individual command tests",
    "edge_cases: Boundary conditions",
    "workflows: End-to-end workflow tests",
]
timeout = 120
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
